Compat 1.18 Fixes sweet_potato-issueTracker#28 BlockSettings & ItemSettings: avoids easy modifications from other mods.